<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_show"/>

    <ImageView
        android:id="@+id/app_store_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/app_store_logo"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@mipmap/app_store_icon"/>

    <TextView
        android:id="@+id/app_store_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:gravity="center"
        android:lines="1"
        android:text="@string/app_license"
        android:textSize="@dimen/activity_text_small"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/app_store_license"
        android:layout_below="@id/app_store_logo">

        <View
            android:id="@+id/app_view"
            android:layout_width="1dip"
            android:layout_height="1dip"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/app_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/app_view"
            android:gravity="center"
            android:lines="1"
            android:text="@string/app_name"
            android:textSize="@dimen/activity_text_big"/>

        <TextView
            android:id="@+id/app_store_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_view"
            android:gravity="center"
            android:lines="1"
            android:text="@string/app_show"
            android:textSize="@dimen/activity_text_big"/>
    </RelativeLayout>
</RelativeLayout>