<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="5dip"
                                            android:background="@color/appStoreColor"
                                            android:paddingLeft="14dip"
                                            android:paddingRight="14dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/app_detail_head"/>

        <TextView
            android:id="@+id/app_detail_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="14dip"
            android:text="@string/detail_screen_title"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/recycle_title"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/app_detail_screen_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"/>

        <TextView
            android:id="@+id/app_detail_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/detail_desc_title"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/recycle_title"/>

        <TextView
            android:id="@+id/app_detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="8dip"
            android:textColor="@color/detailDescColor"
            android:textSize="@dimen/recycle_small"/>

        <TextView
            android:id="@+id/app_detail_version_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_version_desc_title"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/recycle_title"/>

        <TextView
            android:id="@+id/app_detail_version_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="8dip"
            android:textColor="@color/detailDescColor"
            android:textSize="@dimen/recycle_small"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>